KULRICE-7005: Implement server paging of collection results * Applying more code review feedback